--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --cell-size: 6rem;
-    --font-size: 1rem;
+    --cell-size: 10rem;
+    --font-size: 1.2rem;
     --gap-size: 0.5rem;
     --primary-color: #4caf50;
     --text-color: #fff;
@@ -15,7 +15,7 @@
   
   body {
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', sans-serif;;
     background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
@@ -121,9 +121,9 @@
   /* 小屏幕优化 */
   @media (max-width: 600px) {
     :root {
-      --cell-size: 4.5rem;
-      --font-size: 0.8rem;
-      --checkmark-size: 1.5rem;
+      --cell-size: 6.5rem;
+      --font-size: 1rem;
+      --checkmark-size: 1.8rem;
     }
   
     .game-title {
